# python-hometask

./: .env.dist  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 202408072147-init_tables.py
curl/: contracts_create.sh  contracts_get_by_id.sh  contracts_get_one.sh
hometask/: app.py  enums.py  exceptions.py  models.py  orm.py  profile_service.py  routers.py  script.py  temp_script.py
hometask/enums/: enums.py
hometask/models/: models.py
hometask/services/: contract_service.py  contracts_service.py  profile_service.py
src/: app.py  exceptions.py  models.py  orm.py  routes.py  util.py
src/admin/: admin_controller.py  admin_service.py
src/contract/: contract_model.py  contracts_controller.py  contracts_service.py
src/contracts/: contracts_controller.py  contracts_service.py
src/job/: job_model.py  jobs_controller.py  jobs_service.py
src/jobs/: jobs_controller.py  jobs_service.py
src/profile/: balances_controller.py  balances_service.py  profile_model.py  profiles_service.py
src/services/: contract_service.py  profile_service.py
src/try/: init_profiles.py  write_profiles.py
src/util/: datatypes.py  flask.py
tests/integration/: conftest.py  data_fixtures.py  test_admin_service.py  test_balances_service.py  test_contract_service.py  test_contracts_service.py  test_jobs_service.py
tests/integration/util/: data_fixture.py
tests/unit/: test_admin_controller.py  test_balances_controller.py  test_contracts_controller.py
